<?xml version="1.0" encoding="utf-8"?> 
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:wb="http://schemas.android.com/apk/res-auto" >
	<PreferenceCategory
	    android:title="@string/pref_output_header"
	    android:key="pref_output_category_key">
		<Preference 
		    android:key="@string/pref_output_custom_csv_key" 
			android:title="@string/pref_output_custom_csv_title" />
		<Preference 
		    android:key="@string/pref_output_custom_pdf_key" 
			android:title="@string/pref_output_custom_pdf_key" />
	   <CheckBoxPreference
	       android:key="@string/pref_output_csv_header_key"
	       android:title="@string/pref_output_csv_header_title"
	       android:summary="@string/pref_output_csv_header_summary"
	       android:defaultValue="false"/>
	   <wb.android.preferences.EmptyValueSummaryEditTextPreference
	       android:key="@string/pref_output_username_key"
	       android:title="@string/pref_output_username_title"
	       wb:emptyValue="@string/pref_output_username_emptyValue" />
		<CheckBoxPreference
            android:key="@string/pref_output_launch_file_explorer_key"
            android:title="@string/pref_output_launch_file_explorer_title"
            android:summary="@string/pref_output_launch_file_explorer_summary"
            android:defaultValue="false "/>
		<CheckBoxPreference
            android:key="@string/pref_output_print_receipt_id_by_photo_key"
            android:title="@string/pref_output_print_receipt_id_by_photo_title"
            android:summary="@string/pref_output_print_receipt_id_by_photo_summary"
            android:defaultValue="false "/>
		<!-- 
		<CheckBoxPreference
            android:key="@string/pref_output_optimize_space_key"
            android:title="@string/pref_output_optimize_space_title"
            android:summaryOn="@string/pref_output_optimize_space_summaryOn"
            android:summaryOff="@string/pref_output_optimize_space_summaryOff"
            android:defaultValue="true"/>
             -->
        <CheckBoxPreference
            android:key="@string/pref_output_blank_signature_key"
            android:title="@string/pref_output_blank_signature_title"
            android:summaryOn="@string/pref_output_blank_signature_summaryOn"
            android:summaryOff="@string/pref_output_blank_signature_summaryOff"
            android:defaultValue="@bool/pref_output_blank_signature_defaultValue"/>
        <wb.android.preferences.EmptyValueSummaryPreference
            android:key="@string/pref_output_signature_picture_key"
            android:title="@string/pref_output_signature_picture_title"
            wb:emptyValue="@string/pref_output_signature_picture_emptyValue" />
	</PreferenceCategory>
</PreferenceScreen>
