<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory
	    android:title="@string/pref_distance_header"
	    android:key="pref_layout_category_key">
        <CheckBoxPreference
            android:key="@string/pref_distance_include_price_in_report_key"
            android:title="@string/pref_distance_include_price_in_report_title"
            android:summaryOn="@string/pref_distance_include_price_in_report_summaryOn"
            android:summaryOff="@string/pref_distance_include_price_in_report_summaryOff"
            android:defaultValue="@bool/pref_distance_include_price_in_report_defaultValue"/>
        <co.smartreceipts.android.fragments.preferences.DefaultDistanceRatePreference
            android:key="@string/pref_distance_rate_key"
            android:title="@string/pref_distance_rate_title"
            android:inputType="number|numberDecimal" />
	    <CheckBoxPreference
	        android:key="@string/pref_distance_print_table_key"
	        android:title="@string/pref_distance_print_table_title"
	        android:summaryOn="@string/pref_distance_print_table_summaryOn"
            android:summaryOff="@string/pref_distance_print_table_summaryOff"
	        android:defaultValue="@bool/pref_distance_print_table_defaultValue"/>
        <CheckBoxPreference
            android:key="@string/pref_distance_print_daily_key"
            android:title="@string/pref_distance_print_daily_title"
            android:summaryOn="@string/pref_distance_print_daily_summaryOn"
            android:summaryOff="@string/pref_distance_print_daily_summaryOff"
            android:defaultValue="@bool/pref_distance_print_daily_defaultValue"/>
	</PreferenceCategory>
</PreferenceScreen>
