<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory
	    android:title="@string/pref_about_header"
	    android:key="pref_about_category_key">
		<Preference android:key="@string/pref_about_version_key" 
			android:title="@string/pref_about_version_title" />
		<wb.android.preferences.DialogPreference android:key="@string/pref_about_about_key" 
		    android:title="@string/pref_about_about_title"
		    android:dialogTitle="@string/pref_about_about_title"
		    android:dialogMessage="@string/pref_about_about_dialogMessage" />
		<wb.android.preferences.DialogPreference android:key="@string/pref_about_terms_key" 
			android:title="@string/pref_about_terms_title"
			android:dialogTitle="@string/pref_about_terms_title"
			android:dialogMessage="@string/pref_about_terms_dialogMessage" />
	</PreferenceCategory>
</PreferenceScreen>
