<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:title="@string/pref_general_header"
        android:key="pref_general_category_key">
        <co.smartreceipts.android.settings.widget.DefaultDurationEditTextPreference
            android:key="@string/pref_general_trip_duration_key"
            android:title="@string/pref_general_trip_duration_title"
            android:inputType="number"
            android:defaultValue="@integer/pref_general_trip_duration_defaultValue" />
        <wb.android.preferences.SummaryListPreference
            android:key="@string/pref_general_default_currency_key"
            android:title="@string/pref_general_default_currency_title"
            android:defaultValue="@string/pref_general_default_currency_defaultValue"/>
        <wb.android.preferences.SummaryListPreference
            android:key="@string/pref_general_default_date_separator_key"
            android:title="@string/pref_general_default_date_separator_title"
            android:defaultValue="@string/pref_general_default_date_separator_key" />
        <CheckBoxPreference
            android:key="@string/pref_general_track_cost_center_key"
            android:title="@string/pref_general_track_cost_center_title"
            android:summaryOn="@string/pref_general_track_cost_center_summaryOn"
            android:summaryOff="@string/pref_general_track_cost_center_summaryOff"
            android:defaultValue="@bool/pref_general_track_cost_center_defaultValue"/>
	</PreferenceCategory>
</PreferenceScreen>