<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:padding="6dp">
        <CheckBox android:id="@+id/DIALOG_EMAIL_CHECKBOX_PDF_FULL"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/DIALOG_EMAIL_CHECKBOX_PDF_FULL" />
        <CheckBox android:id="@+id/DIALOG_EMAIL_CHECKBOX_PDF_IMAGES"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/DIALOG_EMAIL_CHECKBOX_PDF_IMAGES" />
        <CheckBox android:id="@+id/DIALOG_EMAIL_CHECKBOX_CSV"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/DIALOG_EMAIL_CHECKBOX_CSV" />
        <CheckBox android:id="@+id/DIALOG_EMAIL_CHECKBOX_ZIP_IMAGES_STAMPED"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/DIALOG_EMAIL_CHECKBOX_ZIP_IMAGES_STAMPED" />
    </LinearLayout>
</ScrollView>