<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/generate_report_item_separation"
        android:padding="@dimen/generate_report_padding">
        <CheckBox android:id="@+id/DIALOG_EMAIL_CHECKBOX_PDF_FULL"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
            android:textAppearance="@style/Widget.SmartReceipts.TextView.Title"
            android:layout_marginBottom="@dimen/generate_report_item_separation"
            android:paddingLeft="@dimen/generate_report_item_separation"
            android:paddingRight="@dimen/generate_report_item_separation"
    		android:text="@string/DIALOG_EMAIL_CHECKBOX_PDF_FULL" />
        <CheckBox android:id="@+id/DIALOG_EMAIL_CHECKBOX_PDF_IMAGES"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
            android:textAppearance="@style/Widget.SmartReceipts.TextView.Title"
            android:layout_marginBottom="@dimen/generate_report_item_separation"
            android:paddingLeft="@dimen/generate_report_item_separation"
            android:paddingRight="@dimen/generate_report_item_separation"
    		android:text="@string/DIALOG_EMAIL_CHECKBOX_PDF_IMAGES" />
        <CheckBox android:id="@+id/DIALOG_EMAIL_CHECKBOX_CSV"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
            android:textAppearance="@style/Widget.SmartReceipts.TextView.Title"
            android:layout_marginBottom="@dimen/generate_report_item_separation"
            android:paddingLeft="@dimen/generate_report_item_separation"
            android:paddingRight="@dimen/generate_report_item_separation"
    		android:text="@string/DIALOG_EMAIL_CHECKBOX_CSV" />
        <CheckBox android:id="@+id/DIALOG_EMAIL_CHECKBOX_ZIP_IMAGES_STAMPED"
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
            android:textAppearance="@style/Widget.SmartReceipts.TextView.Title"
            android:paddingLeft="@dimen/generate_report_item_separation"
            android:paddingRight="@dimen/generate_report_item_separation"
    		android:text="@string/DIALOG_EMAIL_CHECKBOX_ZIP_IMAGES_STAMPED" />
    </LinearLayout>
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/ic_action_send"
        fab:fab_colorNormal="@color/smart_receipts_colorPrimaryDark"
        fab:fab_colorPressed="@color/smart_receipts_colorPrimaryDark_pressed"
        fab:fab_colorRipple="@color/smart_receipts_ripple_dark" />
</RelativeLayout>